--- a/wp-content/themes/bspd/package.json
+++ b/wp-content/themes/bspd/package.json
@@ -23,5 +23,7 @@
     "@roots/bud-tailwindcss": "6.20.0",
     "@roots/sage": "6.20.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "yarn": "^1.22.22"
+  }
 }
